add the possibility to remove the CoM height from the IK problem (qpOASES)

--- a/app/robots/iCubGazeboV2_5/qpInverseKinematics.ini
+++ b/app/robots/iCubGazeboV2_5/qpInverseKinematics.ini
@@ -1,6 +1,7 @@
-# CoM
+g# CoM
 useCoMAsConstraint               1
 # comWeightTriplets              ((0,0,100), (1,1,100), (2,2,100))
+useCoMHeight                     1
 
 # weight matrices related to the neck
 #DEGREES
