--- a/app/robots/iCubGenova02/qpInverseKinematics.ini
+++ b/app/robots/iCubGenova02/qpInverseKinematics.ini
@@ -1,6 +1,7 @@
 # CoM
 useCoMAsConstraint               1
 # comWeightTriplets              ((0,0,100), (1,1,100), (2,2,100))
+useCoMHeight                     1
 
 # weight matrices related to the neck
 neckWeightTriplets              ((0,0,1), (1,1,1), (2,2,1))
