implement joint torque controller

--- a/app/robots/icubGazeboSim/dcmWalkingCoordinator.ini
+++ b/app/robots/icubGazeboSim/dcmWalkingCoordinator.ini
@@ -37,19 +37,22 @@ use_QP-IK                          1
 
 # Remove this line if you don't want to use osqp to
 # solve QP-IK. In this case qpOASES will be used
-# use_osqp                               1
+use_osqp                               1
 
 # Remove this line if you don't want to velocity
 # controller as an IK (in this case use the desired)
 use_velocity_controller_as_IK   1
 
-# Remove this line if you don't want to velocity interface
+# Remove this line if you don't want to use velocity interface
 # if the velocity controller is used as IK only position
 # direct will be used.
 # use_velocity                             1
 
+# Remove this line if you don't want to use torque interface
+use_torque                                 1
+
 # remove this line if you don't want to save data of the experiment
-#dump_data                          1
+dump_data                          1
 
 [GENERAL]
 # height of the com
@@ -92,3 +95,6 @@ sampling_time           0.01
 
 # include velocity modulation
 [include VELOCITY_MODULATION "velocityModulation.ini"]
+
+# include joint torque parameter
+[include JOINT_TORQUE_CONTROLLER "jointTorqueControllerParams.ini"]
