implement first version of task based torque controller

--- a/modules/Walking_module/CMakeLists.txt
+++ b/modules/Walking_module/CMakeLists.txt
@@ -40,6 +40,9 @@ set(${EXE_TARGET_NAME}_SRC
   src/WalkingPIDHandler.cpp
   src/WalkingLogger.cpp
   src/TimeProfiler.cpp
+  src/CartesianPID.cpp
+  src/WalkingConstraint.cpp
+  src/WalkingTaskBasedTorqueController.cpp
   )
 
 # set hpp files
@@ -59,6 +62,10 @@ set(${EXE_TARGET_NAME}_HDR
   include/WalkingLogger.hpp
   include/WalkingLogger.tpp
   include/TimeProfiler.hpp
+  include/CartesianPID.hpp
+  include/WalkingConstraint.hpp
+  include/WalkingConstraint.tpp
+  include/WalkingTaskBasedTorqueController.hpp
   )
 
 # add include directories to the build.
