update parameters (icubGazeboSim)

--- a/app/robots/icubGazeboSim/dcmWalkingCoordinator.ini
+++ b/app/robots/icubGazeboSim/dcmWalkingCoordinator.ini
@@ -51,7 +51,7 @@ use_velocity_controller_as_IK   1
 use_torque_controller                    1
 
 # remove this line if you don't want to save data of the experiment
-#dump_data                          1
+dump_data                          1
 
 [GENERAL]
 # height of the com
