--- a/app/robots/icubGazeboSim/taskBasedTorqueControllerOptions.ini
+++ b/app/robots/icubGazeboSim/taskBasedTorqueControllerOptions.ini
@@ -1,16 +1,16 @@
 [COM]
-kp      1.0
-kd      1.0
+kp      25.0
+kd      10.0
 
 [FEET]
-kp      0.0
-kd      0.0
-c0      0.0
-c1      0.0
-c2      0.0
+kp      4.0
+kd      4.0
+c0      0.0001
+c1      0.25
+c2      1.0
 
 [CONTACT_FORCES]
-staticFrictionCoefficient       1.0
+staticFrictionCoefficient       0.33
 numberOfPoints                  4
 torsionalFrictionCoefficient    0.0133
 foot_size               ((-0.07   0.07), (-0.03   0.03))
@@ -18,8 +18,8 @@ minimalNormalForce      10.0
 
 [NECK_ORIENTATION]
 neckWeight              (0, 0, 0)
-c0                      1.0
-c1                      1.0
+c0                      0.0001
+c1                      0.25
 c2                      1.0
 additional_rotation     ((0.0 -1.0 0.0),(1.0 0.0 0.0),(0.0 0.0 1.0))
 
@@ -55,20 +55,30 @@ jointRegularization            (15, 0, 0,
                                 5.082, 0.406, -0.131, -45.249, -26.454, -0.351,
                                 5.082, 0.406, -0.131, -45.249, -26.454, -0.351)
 
-jointRegularizationWeights     (0.5, 0.5, 0.5,
-                                0.5, 0.5, 0.5, 0.5,
-                                0.5, 0.5, 0.5, 0.5,
-                                0.5, 0.5, 0.5, 0.5, 0.5, 0.5,
-                                0.5, 0.5, 0.5, 0.5, 0.5, 0.5)
+jointRegularizationWeights     (5.0, 5.0, 5.0,
+                                5.0, 5.0, 5.0, 5.0,
+                                5.0, 5.0, 5.0, 5.0,
+                                5.0, 5.0, 5.0, 5.0, 5.0, 5.0,
+                                5.0, 5.0, 5.0, 5.0, 5.0, 5.0)
 
-jointRegularizationProportionalGains       (0.5, 0.5, 0.5,
-                                            0.5, 0.5, 0.5, 0.5,
-                                            0.5, 0.5, 0.5, 0.5,
-                                            0.5, 0.5, 0.5, 0.5, 0.5, 0.5,
-                                            0.5, 0.5, 0.5, 0.5, 0.5, 0.5)
+jointRegularizationProportionalGains       (4.0, 4.0, 4.0,
+                                            4.0, 4.0, 4.0, 4.0,
+                                            4.0, 4.0, 4.0, 4.0,
+                                            4.0, 4.0, 4.0, 4.0, 4.0, 4.0,
+                                            4.0, 4.0, 4.0, 4.0, 4.0, 4.0)
 
-jointRegularizationDerivativeGains         (0.5, 0.5, 0.5,
-                                            0.5, 0.5, 0.5, 0.5,
-                                            0.5, 0.5, 0.5, 0.5,
-                                            0.5, 0.5, 0.5, 0.5, 0.5, 0.5,
-                                            0.5, 0.5, 0.5, 0.5, 0.5, 0.5)
+jointRegularizationDerivativeGains         (4.0, 4.0, 4.0,
+                                            4.0, 4.0, 4.0, 4.0,
+                                            4.0, 4.0, 4.0, 4.0,
+                                            4.0, 4.0, 4.0, 4.0, 4.0, 4.0,
+                                            4.0, 4.0, 4.0, 4.0, 4.0, 4.0)
+
+
+[REGULARIZATION_INPUT]
+inputRegularizationWeight                   (0.05, 0.05, 0.05,
+                                             0.05, 0.05, 0.05, 0.05,
+                                             0.05, 0.05, 0.05, 0.05,
+                                             0.05, 0.05, 0.05, 0.05, 0.05, 0.05,
+                                             0.05, 0.05, 0.05, 0.05, 0.05, 0.05,
+                                             0.0, 0.0, 0.0, 0.0, 0.0, 0.0,
+                                             0.0, 0.0, 0.0, 0.0, 0.0, 0.0)
