--- a/app/robots/iCubGazeboV2_5/dcmWalkingCoordinator.ini
+++ b/app/robots/iCubGazeboV2_5/dcmWalkingCoordinator.ini
@@ -3,17 +3,17 @@ name                    walking-coordinator
 
 robot                   icubSim
 
-joints_list             ("torso_pitch", "torso_roll", "torso_yaw",
-                        "l_shoulder_pitch", "l_shoulder_roll", "l_shoulder_yaw", "l_elbow", "l_wrist_prosup", "l_wrist_pitch", "l_wrist_yaw",
-                        "r_shoulder_pitch", "r_shoulder_roll", "r_shoulder_yaw", "r_elbow", "r_wrist_prosup", "r_wrist_pitch", "r_wrist_yaw",
-                        "l_hip_pitch", "l_hip_roll", "l_hip_yaw", "l_knee", "l_ankle_pitch", "l_ankle_roll",
-                        "r_hip_pitch", "r_hip_roll", "r_hip_yaw", "r_knee", "r_ankle_pitch", "r_ankle_roll")
-
 # joints_list             ("torso_pitch", "torso_roll", "torso_yaw",
-#                         "l_shoulder_pitch", "l_shoulder_roll", "l_shoulder_yaw", "l_elbow",
-#                         "r_shoulder_pitch", "r_shoulder_roll", "r_shoulder_yaw", "r_elbow",
+#                         "l_shoulder_pitch", "l_shoulder_roll", "l_shoulder_yaw", "l_elbow", "l_wrist_prosup", "l_wrist_pitch", "l_wrist_yaw",
+#                         "r_shoulder_pitch", "r_shoulder_roll", "r_shoulder_yaw", "r_elbow", "r_wrist_prosup", "r_wrist_pitch", "r_wrist_yaw",
 #                         "l_hip_pitch", "l_hip_roll", "l_hip_yaw", "l_knee", "l_ankle_pitch", "l_ankle_roll",
 #                         "r_hip_pitch", "r_hip_roll", "r_hip_yaw", "r_knee", "r_ankle_pitch", "r_ankle_roll")
+
+joints_list             ("torso_pitch", "torso_roll", "torso_yaw",
+                        "l_shoulder_pitch", "l_shoulder_roll", "l_shoulder_yaw", "l_elbow",
+                        "r_shoulder_pitch", "r_shoulder_roll", "r_shoulder_yaw", "r_elbow",
+                        "l_hip_pitch", "l_hip_roll", "l_hip_yaw", "l_knee", "l_ankle_pitch", "l_ankle_roll",
+                        "r_hip_pitch", "r_hip_roll", "r_hip_yaw", "r_knee", "r_ankle_pitch", "r_ankle_roll")
 
 remote_control_boards   ("torso", "left_arm", "right_arm", "left_leg", "right_leg")
 
@@ -39,8 +39,16 @@ use_QP-IK                          1
 # controller as an IK (in this case use the desired)
 use_velocity_controller_as_IK   1
 
+# Remove this line if you don't want to velocity interface
+# if the velocity controller is used as IK only position
+# direct will be used.
+# use_velocity                             1
+
+use_torque_controller                    1
+
+
 # remove this line if you don't want to save data of the experiment
-# dump_data                          1
+dump_data                          1
 
 [GENERAL]
 # height of the com
@@ -65,6 +73,9 @@ sampling_time           0.01
 
 # include qp inverse kinematcs parameters
 [include INVERSE_KINEMATICS_QP_SOLVER "qpInverseKinematics.ini"]
+
+# include velocity modulation
+[include TASK_BASED_TORQUE_CONTROLLER "taskBasedTorqueControllerOptions.ini"]
 
 # include inverse kinematcs parameters
 [include FORWARD_KINEMATICS_SOLVER "forwardKinematics.ini"]
