tuning for iCubGazeboV2_5 (Controller 4.1)

--- a/app/robots/iCubGazeboV2_5/taskBasedTorqueControllerOptions.ini
+++ b/app/robots/iCubGazeboV2_5/taskBasedTorqueControllerOptions.ini
@@ -1,23 +1,35 @@
 [COM]
-kp      0.0
-kd      0.0
+kp                     4.0
+kd                     4.0
+controllOnlyHeight     1
+
+# [LINEAR_MOMENTUM]
+# kp      0.0
+# kd      0.0
+
+# [ANGULAR_MOMENTUM]
+# kp      10.0
+# kd      0.0
 
 [FEET]
-kp      10.0
-kd      10.0
+kp      4.0
+kd      4.0
 c0      0.0001
 c1      4.0
 c2      4.0
 
+[ZMP]
+useZMP 1
+
 [CONTACT_FORCES]
-staticFrictionCoefficient       0.33
+staticFrictionCoefficient       1.0
 numberOfPoints                  4
 torsionalFrictionCoefficient    0.0133
-foot_size               ((-0.07   0.07), (-0.03   0.03))
+foot_size               ((-0.7   1.2), (-0.4   0.4))
 minimalNormalForce      10.0
 
 [NECK_ORIENTATION]
-neckWeight              (4.0, 4.0, 4.0)
+neckWeight              (0.5, 0.5, 0.5)
 c0                      0.0001
 c1                      4.0
 c2                      4.0
@@ -36,24 +48,25 @@ jointRegularizationWeights     (5.0, 5.0, 5.0,
                                 5.0, 5.0, 5.0, 5.0, 5.0, 5.0,
                                 5.0, 5.0, 5.0, 5.0, 5.0, 5.0)
 
-jointRegularizationProportionalGains       (1.0, 1.0, 1.0,
-                                            1.0, 1.0, 1.0, 1.0,
-                                            1.0, 1.0, 1.0, 1.0,
-                                            1.0, 1.0, 1.0, 1.0, 1.0, 1.0,
-                                            1.0, 1.0, 1.0, 1.0, 1.0, 1.0)
+jointRegularizationProportionalGains       (4.0, 4.0, 4.0,
+                                            4.0, 4.0, 4.0, 4.0,
+                                            4.0, 4.0, 4.0, 4.0,
+                                            4.0, 4.0, 4.0, 4.0, 4.0, 4.0,
+                                            4.0, 4.0, 4.0, 4.0, 4.0, 4.0)
 
-jointRegularizationDerivativeGains         (1.0, 1.0, 1.0,
-                                            1.0, 1.0, 1.0, 1.0,
-                                            1.0, 1.0, 1.0, 1.0,
-                                            1.0, 1.0, 1.0, 1.0, 1.0, 1.0,
-                                            1.0, 1.0, 1.0, 1.0, 1.0, 1.0)
+jointRegularizationDerivativeGains         (4.0, 4.0, 4.0,
+                                            4.0, 4.0, 4.0, 4.0,
+                                            4.0, 4.0, 4.0, 4.0,
+                                            4.0, 4.0, 4.0, 4.0, 4.0, 4.0,
+                                            4.0, 4.0, 4.0, 4.0, 4.0, 4.0)
 
+[REGULARIZATION_TORQUE]
+regularizationWeights                   (0.5, 0.5, 0.5,
+                                              0.5, 0.5, 0.5, 0.5,
+                                              0.5, 0.5, 0.5, 0.5,
+                                              0.5, 0.5, 0.5, 0.5, 0.5, 0.5,
+                                              0.5, 0.5, 0.5, 0.5, 0.5, 0.5)
 
-[REGULARIZATION_INPUT]
-inputRegularizationWeights                   (0.05, 0.05, 0.05,
-                                              0.05, 0.05, 0.05, 0.05,
-                                              0.05, 0.05, 0.05, 0.05,
-                                              0.05, 0.05, 0.05, 0.05, 0.05, 0.05,
-                                              0.05, 0.05, 0.05, 0.05, 0.05, 0.05,
-                                              0.05, 0.05, 0.05, 0.05, 0.05, 0.05,
-                                              0.05, 0.05, 0.05, 0.05, 0.05, 0.05)
+[REGULARIZATION_FORCE]
+regularizationForceScale                1.0
+regularizationForceOffset               0.05
