--- a/app/robots/iCubGazeboV2_5/taskBasedTorqueControllerOptions.ini
+++ b/app/robots/iCubGazeboV2_5/taskBasedTorqueControllerOptions.ini
@@ -1,6 +1,6 @@
 [COM]
-kp                     4.0
-kd                     4.0
+kp                     1.0
+kd                     1.0
 controllOnlyHeight     1
 
 # [LINEAR_MOMENTUM]
@@ -12,24 +12,24 @@ controllOnlyHeight     1
 # kd      0.0
 
 [FEET]
-kp      4.0
-kd      4.0
-c0      0.0001
-c1      4.0
-c2      4.0
+kp      0.0
+kd      0.0
+c0      0.0
+c1      0.0
+c2      0.0
 
 [ZMP]
 useZMP 1
 
 [CONTACT_FORCES]
-staticFrictionCoefficient       1.0
+staticFrictionCoefficient       0.33
 numberOfPoints                  4
 torsionalFrictionCoefficient    0.0133
-foot_size               ((-0.7   1.2), (-0.4   0.4))
-minimalNormalForce      10.0
+foot_size                       ((-0.07   0.12), (-0.04   0.04))
+minimalNormalForce              0.0
 
 [NECK_ORIENTATION]
-neckWeight              (0.5, 0.5, 0.5)
+neckWeight              (1.0, 1.0, 1.0)
 c0                      0.0001
 c1                      4.0
 c2                      4.0
@@ -42,31 +42,31 @@ jointRegularization            (15, 0, 0,
                                 5.082, 0.406, -0.131, -45.249, -26.454, -0.351,
                                 5.082, 0.406, -0.131, -45.249, -26.454, -0.351)
 
-jointRegularizationWeights     (5.0, 5.0, 5.0,
-                                5.0, 5.0, 5.0, 5.0,
-                                5.0, 5.0, 5.0, 5.0,
-                                5.0, 5.0, 5.0, 5.0, 5.0, 5.0,
-                                5.0, 5.0, 5.0, 5.0, 5.0, 5.0)
+jointRegularizationWeights     (10.0, 10.0, 10.0,
+                                10.0, 10.0, 10.0, 10.0,
+                                10.0, 10.0, 10.0, 10.0,
+                                10.0, 10.0, 10.0, 10.0, 10.0, 10.0,
+                                10.0, 10.0, 10.0, 10.0, 10.0, 10.0)
 
-jointRegularizationProportionalGains       (4.0, 4.0, 4.0,
-                                            4.0, 4.0, 4.0, 4.0,
-                                            4.0, 4.0, 4.0, 4.0,
-                                            4.0, 4.0, 4.0, 4.0, 4.0, 4.0,
-                                            4.0, 4.0, 4.0, 4.0, 4.0, 4.0)
+proportionalGains       (4.0, 4.0, 4.0,
+                         4.0, 4.0, 4.0, 4.0,
+                         4.0, 4.0, 4.0, 4.0,
+                         4.0, 4.0, 4.0, 4.0, 4.0, 4.0,
+                         4.0, 4.0, 4.0, 4.0, 4.0, 4.0)
 
-jointRegularizationDerivativeGains         (4.0, 4.0, 4.0,
-                                            4.0, 4.0, 4.0, 4.0,
-                                            4.0, 4.0, 4.0, 4.0,
-                                            4.0, 4.0, 4.0, 4.0, 4.0, 4.0,
-                                            4.0, 4.0, 4.0, 4.0, 4.0, 4.0)
+derivativeGains         (4.0, 4.0, 4.0,
+                         4.0, 4.0, 4.0, 4.0,
+                         4.0, 4.0, 4.0, 4.0,
+                         4.0, 4.0, 4.0, 4.0, 4.0, 4.0,
+                         4.0, 4.0, 4.0, 4.0, 4.0, 4.0)
 
 [REGULARIZATION_TORQUE]
 regularizationWeights                   (0.5, 0.5, 0.5,
-                                              0.5, 0.5, 0.5, 0.5,
-                                              0.5, 0.5, 0.5, 0.5,
-                                              0.5, 0.5, 0.5, 0.5, 0.5, 0.5,
-                                              0.5, 0.5, 0.5, 0.5, 0.5, 0.5)
+                                         0.5, 0.5, 0.5, 0.5,
+                                         0.5, 0.5, 0.5, 0.5,
+                                         0.5, 0.5, 0.5, 0.5, 0.5, 0.5,
+                                         0.5, 0.5, 0.5, 0.5, 0.5, 0.5)
 
 [REGULARIZATION_FORCE]
-regularizationForceScale                1.0
-regularizationForceOffset               0.05
+regularizationForceScale                20.0
+regularizationForceOffset               0.5
