- bugfix in WalkingConstraint.cpp - uso two separate solver for handling single and double support phases

--- a/app/robots/iCubGazeboV2_5/taskBasedTorqueControllerOptions.ini
+++ b/app/robots/iCubGazeboV2_5/taskBasedTorqueControllerOptions.ini
@@ -1,7 +1,7 @@
 [COM]
-kp                     1.0
-kd                     1.0
-controllOnlyHeight     1
+kp                     4.0
+kd                     4.0
+#controllOnlyHeight     1
 
 # [LINEAR_MOMENTUM]
 # kp      0.0
@@ -12,14 +12,14 @@ controllOnlyHeight     1
 # kd      0.0
 
 [FEET]
-kp      0.0
-kd      0.0
-c0      0.0
-c1      0.0
-c2      0.0
+kp      4.0
+kd      4.0
+c0      0.0001
+c1      4.0
+c2      4.0
 
-[ZMP]
-useZMP 1
+# [ZMP]
+# useZMP 1
 
 [CONTACT_FORCES]
 staticFrictionCoefficient       0.33
@@ -29,7 +29,7 @@ foot_size                       ((-0.07   0.12), (-0.04   0.04))
 minimalNormalForce              0.0
 
 [NECK_ORIENTATION]
-neckWeight              (1.0, 1.0, 1.0)
+neckWeight              (4.0, 4.0, 4.0)
 c0                      0.0001
 c1                      4.0
 c2                      4.0
@@ -68,5 +68,5 @@ regularizationWeights                   (0.5, 0.5, 0.5,
                                          0.5, 0.5, 0.5, 0.5, 0.5, 0.5)
 
 [REGULARIZATION_FORCE]
-regularizationForceScale                20.0
+regularizationForceScale                10.0
 regularizationForceOffset               0.5
