tune gains for left and right demo (CoM)

--- a/app/robots/iCubGazeboV2_5/taskBasedTorqueControllerOptions.ini
+++ b/app/robots/iCubGazeboV2_5/taskBasedTorqueControllerOptions.ini
@@ -1,7 +1,8 @@
 [COM]
-kp                     4.0
-kd                     4.0
-#controllOnlyHeight     1
+kp                     (10.0, 10.0, 1.0)
+# kd                    (5.0, 5.0, 5.0)
+useDefaultKd         1
+controllOnlyHeight    0
 
 # [LINEAR_MOMENTUM]
 # kp      0.0
@@ -14,9 +15,10 @@ kd                     4.0
 [FEET]
 kp      4.0
 kd      4.0
-c0      0.0001
-c1      4.0
-c2      4.0
+c0      0.0
+c1      0.0
+c2      0.0
+useDefaultKd         1
 
 # [ZMP]
 # useZMP 1
@@ -25,14 +27,14 @@ c2      4.0
 staticFrictionCoefficient       0.33
 numberOfPoints                  4
 torsionalFrictionCoefficient    0.0133
-foot_size                       ((-0.07   0.12), (-0.04   0.04))
+foot_size                       ((-0.07   0.12), (-0.02   0.02))
 minimalNormalForce              0.0
 
 [NECK_ORIENTATION]
-neckWeight              (4.0, 4.0, 4.0)
-c0                      0.0001
-c1                      4.0
-c2                      4.0
+neckWeight              (50.0, 50.0, 50.0)
+c0                      0.001
+c1                      10.0
+c2                      10.0
 additional_rotation     ((0.0 0.0 1.0),(1.0 0.0 0.0),(0.0 1.0 0.0))
 
 [REGULARIZATION_TASK]
@@ -42,23 +44,26 @@ jointRegularization            (15, 0, 0,
                                 5.082, 0.406, -0.131, -45.249, -26.454, -0.351,
                                 5.082, 0.406, -0.131, -45.249, -26.454, -0.351)
 
-jointRegularizationWeights     (10.0, 10.0, 10.0,
-                                10.0, 10.0, 10.0, 10.0,
-                                10.0, 10.0, 10.0, 10.0,
-                                10.0, 10.0, 10.0, 10.0, 10.0, 10.0,
-                                10.0, 10.0, 10.0, 10.0, 10.0, 10.0)
+jointRegularizationWeights     (10.0, 30.0,  20.0,
+                                100.0, 100.0,  100.0,  50.0,
+                                100.0, 100.0,  100.0,  50.0,
+                                10.0, 10.0,  10.0,  10.0,  10.0,  10.0,
+                                10.0, 10.0,  10.0,  10.0,  10.0,  10.0)
 
-proportionalGains       (4.0, 4.0, 4.0,
-                         4.0, 4.0, 4.0, 4.0,
-                         4.0, 4.0, 4.0, 4.0,
-                         4.0, 4.0, 4.0, 4.0, 4.0, 4.0,
-                         4.0, 4.0, 4.0, 4.0, 4.0, 4.0)
+proportionalGains       (10.0,   30.0,    20.0,
+                         30.0,   30.0,    10.0,    8.0,
+                         30.0,   30.0,    10.0,    8.0,
+                         30.0,   30.0,    20.0,   20.0,    100.0,  100.0,
+                         30.0,   50.0,    30.0,   60.0,    100.0,  100.0)
 
-derivativeGains         (4.0, 4.0, 4.0,
-                         4.0, 4.0, 4.0, 4.0,
-                         4.0, 4.0, 4.0, 4.0,
-                         4.0, 4.0, 4.0, 4.0, 4.0, 4.0,
-                         4.0, 4.0, 4.0, 4.0, 4.0, 4.0)
+
+# derivativeGains         (0.1, 0.1, 0.1,
+#                          0.1, 0.1, 0.1, 0.1,
+#                          0.1, 0.1, 0.1, 0.1,
+#                          0.1, 0.1, 0.1, 0.1, 0.1, 0.1,
+#                          0.1, 0.1, 0.1, 0.1, 0.1, 0.1)
+
+useDefaultKd         1
 
 [REGULARIZATION_TORQUE]
 regularizationWeights                   (0.5, 0.5, 0.5,
@@ -68,5 +73,5 @@ regularizationWeights                   (0.5, 0.5, 0.5,
                                          0.5, 0.5, 0.5, 0.5, 0.5, 0.5)
 
 [REGULARIZATION_FORCE]
-regularizationForceScale                10.0
-regularizationForceOffset               0.5
+regularizationForceScale                0.0
+regularizationForceOffset               0.0
