tune parameters for left and right demo (DCM)

--- a/app/robots/iCubGazeboV2_5/dcmWalkingCoordinator.ini
+++ b/app/robots/iCubGazeboV2_5/dcmWalkingCoordinator.ini
@@ -20,10 +20,12 @@ remote_control_boards   ("torso", "left_arm", "right_arm", "left_leg", "right_le
 # filters
 # if use_*_filter is equal to 0 the low pass filters are not used
 use_joint_velocity_filter          0
-joint_velocity_cut_frequency       10.0
+joint_velocity_cut_frequency       5.0
 
 use_wrench_filter                  0
 wrench_cut_frequency               10.0
+
+use_finite_difference_for_velocity      1
 
 # Remove this line if you don't want to use the MPC
 # use_mpc                            1
@@ -93,3 +95,7 @@ sampling_time           0.01
 
 # include velocity modulation
 # [include VELOCITY_MODULATION "velocityModulation.ini"]
+
+
+# [GAZEBO_CLOCK]
+# gazeboClock             /clock/rpc
