--- a/app/robots/iCubGazeboV2_5/plannerParams.ini
+++ b/app/robots/iCubGazeboV2_5/plannerParams.ini
@@ -23,7 +23,7 @@ minStepDuration         4.7
 
 ##Nominal Values
 #Width
-nominalWidth            0.14
+nominalWidth            0.15
 #Height
 stepHeight              0.025
 stepLandingVelocity     0.0
@@ -46,4 +46,4 @@ swingLeft               1
 startAlwaysSameFoot     1
 
 ##Remove this line if you don't want to use the minimum jerk trajectory in feet interpolation
-useMinimumJerkFootTrajectory    1
+# useMinimumJerkFootTrajectory    1
