--- a/app/robots/iCubGazeboV2_5/taskBasedTorqueControllerOptions.ini
+++ b/app/robots/iCubGazeboV2_5/taskBasedTorqueControllerOptions.ini
@@ -1,8 +1,8 @@
 [COM]
-kp                     (10.0, 10.0, 1.0)
+kp                     (10.0, 10.0, 10.0)
 # kd                    (5.0, 5.0, 5.0)
 useDefaultKd         1
-controllOnlyHeight    0
+controllOnlyHeight    1
 
 # [LINEAR_MOMENTUM]
 # kp      0.0
@@ -20,8 +20,8 @@ c1      0.0
 c2      0.0
 useDefaultKd         1
 
-# [ZMP]
-# useZMP 1
+[ZMP]
+useZMP 1
 
 [CONTACT_FORCES]
 staticFrictionCoefficient       0.33
@@ -31,10 +31,11 @@ foot_size                       ((-0.07   0.12), (-0.02   0.02))
 minimalNormalForce              0.0
 
 [NECK_ORIENTATION]
-neckWeight              (50.0, 50.0, 50.0)
+neckWeight              (10.0, 10.0, 10.0)
 c0                      0.001
-c1                      10.0
-c2                      10.0
+kp                      10.0
+# kd                      10.0
+useDefaultKd            1
 additional_rotation     ((0.0 0.0 1.0),(1.0 0.0 0.0),(0.0 1.0 0.0))
 
 [REGULARIZATION_TASK]
@@ -45,14 +46,14 @@ jointRegularization            (15, 0, 0,
                                 5.082, 0.406, -0.131, -45.249, -26.454, -0.351)
 
 jointRegularizationWeights     (10.0, 30.0,  20.0,
-                                100.0, 100.0,  100.0,  50.0,
-                                100.0, 100.0,  100.0,  50.0,
+                                100.0, 100.0,  100.0,  100.0,
+                                100.0, 100.0,  100.0,  100.0,
                                 10.0, 10.0,  10.0,  10.0,  10.0,  10.0,
                                 10.0, 10.0,  10.0,  10.0,  10.0,  10.0)
 
 proportionalGains       (10.0,   30.0,    20.0,
-                         30.0,   30.0,    10.0,    8.0,
-                         30.0,   30.0,    10.0,    8.0,
+                         30.0,   30.0,    10.0,    30.0,
+                         30.0,   30.0,    10.0,    30.0,
                          30.0,   30.0,    20.0,   20.0,    100.0,  100.0,
                          30.0,   50.0,    30.0,   60.0,    100.0,  100.0)
 
