- test the traking of the swing foot trajectory - tune the cartesian PID gains

--- a/app/robots/iCubGazeboV2_5/taskBasedTorqueControllerOptions.ini
+++ b/app/robots/iCubGazeboV2_5/taskBasedTorqueControllerOptions.ini
@@ -13,14 +13,14 @@ controllOnlyHeight    1
 # kd      0.0
 
 [FEET]
-kp      4.0
-kd      4.0
-c0      0.0
-c1      0.0
-c2      0.0
-useDefaultKd         1
+kpLinear      80.0
+#kdLinear      4.0
+c0             10.0
+kpAngular      200.0
+#kdAngular      6.32
+useDefaultKd     1
 
-[ZMP]
+[ZMP]x
 useZMP 1
 
 [CONTACT_FORCES]
@@ -31,7 +31,7 @@ foot_size                       ((-0.07   0.12), (-0.02   0.02))
 minimalNormalForce              0.0
 
 [NECK_ORIENTATION]
-neckWeight              (10.0, 10.0, 10.0)
+neckWeight              (1.0, 1.0, 1.0)
 c0                      0.001
 kp                      10.0
 # kd                      10.0
@@ -45,7 +45,7 @@ jointRegularization            (15, 0, 0,
                                 5.082, 0.406, -0.131, -45.249, -26.454, -0.351,
                                 5.082, 0.406, -0.131, -45.249, -26.454, -0.351)
 
-jointRegularizationWeights     (10.0, 30.0,  20.0,
+jointRegularizationWeights     (100.0, 300.0,  200.0,
                                 100.0, 100.0,  100.0,  100.0,
                                 100.0, 100.0,  100.0,  100.0,
                                 10.0, 10.0,  10.0,  10.0,  10.0,  10.0,
@@ -74,5 +74,5 @@ regularizationWeights                   (0.5, 0.5, 0.5,
                                          0.5, 0.5, 0.5, 0.5, 0.5, 0.5)
 
 [REGULARIZATION_FORCE]
-regularizationForceScale                0.0
+regularizationForceScale                10.0
 regularizationForceOffset               0.0
