implement first version of feedback linearization torque control

--- a/app/robots/iCubGazeboV2_5/dcmWalkingCoordinator.ini
+++ b/app/robots/iCubGazeboV2_5/dcmWalkingCoordinator.ini
@@ -53,6 +53,11 @@ use_external_robot_base            1
 # include task based torque controller parameters
 [include TASK_BASED_TORQUE_CONTROLLER "taskBasedTorqueControllerOptions.ini"]
 
+# include task based torque controller parameters
+[include CONTACT_WRENCH_MAPPING "contactWrenchMappingOptions.ini"]
+
+[include FEEDBACK_LINEARIZATION_CONTROLLER "feedbackLinearizationController.ini"]
+
 # include inverse kinematcs parameters
 [include FORWARD_KINEMATICS_SOLVER "forwardKinematics.ini"]
 
