first implementation of feedback_linearization_torque_control

--- a/app/robots/iCubGazeboV2_5/contactWrenchMappingOptions.ini
+++ b/app/robots/iCubGazeboV2_5/contactWrenchMappingOptions.ini
@@ -2,6 +2,15 @@
 #useAsCostFunction         1
 useAsConstraint         1
 # weight                    (1000.0, 1000.0, 1000.0)
+kp      (70.0, 70.0, 70.0)
+kd      (10.0 10.0 10.0)
+
+
+[ANGULAR_MOMENTUM]
+useAsConstraint         1
+kp      2.0
+ki      1.0
+
 
 [CONTACT_FORCES]
 staticFrictionCoefficient       0.33
