--- a/app/robots/iCubGazeboV2_5/feedbackLinearizationController.ini
+++ b/app/robots/iCubGazeboV2_5/feedbackLinearizationController.ini
@@ -1,13 +1,31 @@
-joint_regularization_kp       (3.0,   3.0,    3.0,
-                              3.0,   3.0,    3.0,    3.0,
-                              3.0,   3.0,    3.0,    3.0,
-                              3.0,   3.0,    3.0,   3.0,    3.0,  3.0
-                              3.0,   3.0,    3.0,   3.0,    3.0,  3.0)
+# joint_regularization_kp       (4.0,   4.0,    4.0,
+#                               4.0,   4.0,    4.0,    4.0,
+#                               4.0,   4.0,    4.0,    4.0,
+#                               4.0,   4.0,    4.0,   4.0,    4.0,  4.0
+#                               4.0,   4.0,    4.0,   4.0,    4.0,  4.0)
 
-joint_regularization_kd       (1.0,   1.0,    1.0,
-                              1.0,   1.0,    1.0,    1.0,
-                              1.0,   1.0,    1.0,    1.0,
-                              1.0,   1.0,    1.0,   1.0,    1.0,  1.0
-                              1.0,   1.0,    1.0,   1.0,    1.0,  1.0)
+# joint_regularization_kd       (4.0,   4.0,    4.0,
+#                               4.0,   4.0,    4.0,    4.0,
+#                               4.0,   4.0,    4.0,    4.0,
+#                               4.0,   4.0,    4.0,   4.0,    4.0,  4.0
+#                               4.0,   4.0,    4.0,   4.0,    4.0,  4.0)
+joint_regularization_kp       (100    100    100
+                              100    100    100     100
+                              100    100    100     100
+                              100    100    100    100   100   100
+                              100    100    100    100   100   100)
 
-force_gains                   (0.1, 0.1, 0.1, 0.1, 0.1, 0.1)
+joint_regularization_kd       (20 20 20
+                              20 20 20 20
+                              20 20 20 20
+                              20 20 20 20 20 20
+                              20 20 20 20 20 20)
+
+force_gains                   (0.0, 0.0, -0.0, 0.0, 0.0, 0.0)
+
+linear_kp                      (10, 10, 10)
+linear_kd                      (6, 6, 6)
+
+c0                             0.01
+angular_kp                     10.0
+angular_kd                     6.0
