--- a/app/robots/iCubGazeboV2_5/dcmWalkingCoordinator.ini
+++ b/app/robots/iCubGazeboV2_5/dcmWalkingCoordinator.ini
@@ -10,12 +10,12 @@ use_osqp                           1
 
 use_torque_control                 1
 
-use_wait_condition                 1
+use_wait_condition                 0
 switch_in_threshold                0.0
 switch_out_threshold               10.0
 
 # remove this line if you don't want to save data of the experiment
-# dump_data                          1
+dump_data                          1
 
 # general parameters
 [GENERAL]
