adding low pass filter on zmp

--- a/app/robots/iCubGazeboV2_5/dcmWalkingCoordinator.ini
+++ b/app/robots/iCubGazeboV2_5/dcmWalkingCoordinator.ini
@@ -11,6 +11,12 @@ use_osqp                           1
 # remove this line if you don't want to save data of the experiment
 # dump_data                          1
 
+
+# if use_*_filter is equal to 0 the low pass filters are not used
+use_zmp_filter                     1
+zmp_cut_frequency                  10.0
+
+
 # general parameters
 [GENERAL]
 name                    walking-coordinator
