--- a/app/robots/iCubGazeboV2_5/dcmWalkingCoordinator.ini
+++ b/app/robots/iCubGazeboV2_5/dcmWalkingCoordinator.ini
@@ -13,9 +13,13 @@ use_osqp                           1
 
 
 # if use_*_filter is equal to 0 the low pass filters are not used
-use_zmp_filter                     1
+use_zmp_filter                     0
 zmp_cut_frequency                  10.0
 
+# if use_*_filter is equal to 0 the low pass filters are not used
+use_zmp_saturation                 0
+epsilon                            1000.0
+zmp_saturation_threshold           0.0
 
 # general parameters
 [GENERAL]
