--- a/app/robots/iCubGenova04/dcmWalkingCoordinator.ini
+++ b/app/robots/iCubGenova04/dcmWalkingCoordinator.ini
@@ -9,7 +9,16 @@ use_QP-IK                          1
 # use_osqp                           1
 
 # remove this line if you don't want to save data of the experiment
-# dump_data                          1
+# dump_data    
+
+# if use_*_filter is equal to 0 the low pass filters are not used
+use_zmp_filter                     0
+zmp_cut_frequency                  10.0
+
+# if use_*_filter is equal to 0 the low pass filters are not used
+use_zmp_saturation                 0
+epsilon                            1000.0
+zmp_saturation_threshold           0.0                      1
 
 [GENERAL]
 # general parameters
