--- a/app/robots/iCubGazeboV2_5/dcmWalkingCoordinator.ini
+++ b/app/robots/iCubGazeboV2_5/dcmWalkingCoordinator.ini
@@ -1,6 +1,9 @@
 # Remove this line if you don't want to use the MPC
 # use_mpc                            1
 
+# Remove this line if you don't want to use the MPC
+#use_step_adaptation                 1
+
 # Remove this line if you don't want to use the QP-IK
 use_QP-IK                          1
 
@@ -60,3 +63,6 @@ sampling_time           0.01
 
 # include lower PID parameters
 [include PID "pidParams.ini"]
+
+# include Step Adaptator parameters
+[include STEP_ADAPTATOR "stepAdaptation.ini"]
