--- a/app/robots/iCubGazeboV2_5/dcmWalkingCoordinator.ini
+++ b/app/robots/iCubGazeboV2_5/dcmWalkingCoordinator.ini
@@ -2,7 +2,7 @@
 # use_mpc                            1
 
 # Remove this line if you don't want to use the MPC
-#use_step_adaptation                 1
+use_step_adaptation                1
 
 # Remove this line if you don't want to use the QP-IK
 use_QP-IK                          1
@@ -12,7 +12,7 @@ use_QP-IK                          1
 use_osqp                           1
 
 # remove this line if you don't want to save data of the experiment
-# dump_data                          1
+#dump_data                          1
 
 # if use_*_filter is equal to 0 the low pass filters are not used
 use_zmp_filter                     0
