genera refactoring of the Qpsolver and the StepAdaptator

--- a/app/robots/iCubGazeboV2_5/stepAdaptation.ini
+++ b/app/robots/iCubGazeboV2_5/stepAdaptation.ini
@@ -1,13 +1,18 @@
 #The gain of cost function components(alpha1,...)
-cost_function_gains (2.0,0.05,2000.0,0.0)      
+next_zmp_position_weight     (2.0, 2.0)
+next_dcm_offset_weight       (2.0, 2.0)
+sigma_weight                  0.05
+
+step_duration_tolerance       0.1
+zmp_position_tolerance        (0.04, 0.04)
+
+
+# COST_function_gains (2.0,0.05,2000.0,0.0)
 #(10.0,0.02,20000.0,0.0)
 
 #delta=p2-p1
-delta                    0.0            
+delta                    0.0
 
 
 #tolerence between the maximum stepLength and stepTiming and the nominal values(tol_steplength_max,tol_steplength_min,tol_time_max,tol_time_min)
 tolerence_of_bounds   (0.04,0.04,0.0,0.0)
-
-
-
