nive the stepAdaptation.ini file in the right folder

--- a/app/robots/iCubGazeboV2_5/dcm_walking_with_joypad.ini
+++ b/app/robots/iCubGazeboV2_5/dcm_walking_with_joypad.ini
@@ -56,4 +56,4 @@ sampling_time           0.01
 [include PID "./dcm_walking/common/pidParams.ini"]
 
 # include Step Adaptator parameters
-[include STEP_ADAPTATOR "stepAdaptation.ini"]
+[include STEP_ADAPTATOR "./dcm_walking/common/stepAdaptation.ini"]
