--- a/app/robots/iCubGazeboV2_5/dcm_walking/common/stepAdaptation.ini
+++ b/app/robots/iCubGazeboV2_5/dcm_walking/common/stepAdaptation.ini
@@ -4,8 +4,10 @@ next_dcm_offset_weight       (1.0, 1.0)
 sigma_weight                  0.05
 
 step_duration_tolerance       0.0
-zmp_position_tolerance        (0.1, 0.05)
 
+# ront (x positive), back (x negative), left (y positive) and right (y negative)
+zmp_offset_leftFoot           (0.05, 0.01, 0.05, 0.01)
+zmp_offset_rightFoot          (0.05, 0.01, 0.01,  0.05)
 
 # COST_function_gains (2.0,0.05,2000.0,0.0)
 #(10.0,0.02,20000.0,0.0)
