tune parameters for iCubGazeboV2_5

--- a/app/robots/iCubGazeboV2_5/dcm_walking/joypad_control/admittanceController.ini
+++ b/app/robots/iCubGazeboV2_5/dcm_walking/joypad_control/admittanceController.ini
@@ -7,27 +7,27 @@ weight          (0.5, 0.5, 0.5,
                  0.5, 0.5, 0.5, 0.5, 0.5, 0.5)
 
 [JOINT_REGULARIZATION]
+weight         (10.0, 10.0,  10.0,
+                10.0, 20.0,  10.0,  10.0,
+                10.0, 20.0,  10.0,  10.0,
+                10.0, 10.0,  10.0,  10.0,  10.0,  10.0,
+                10.0, 10.0,  10.0,  10.0,  10.0,  10.0)
 
-weight         (1.0, 1.0,  1.0,
-                10.0, 10.0,  1.0,  1.0,
-                10.0, 10.0,  1.0,  1.0,
-                1.0, 1.0,  1.0,  1.0,  1.0,  1.0,
-                1.0, 1.0,  1.0,  1.0,  1.0,  1.0)
+kp             (50.0,   50.0,    50.0,
+                50.0,   50.0,    50.0,    50.0,
+                50.0,   50.0,    50.0,    50.0,
+                50.0,   50.0,    50.0,    50.0,    50.0,  50.0
+                50.0,   50.0,    50.0,    50.0,    50.0,  50.0)
 
-kp             (5.0,   5.0,    5.0,
-                5.0,   5.0,    5.0,    5.0,
-                5.0,   5.0,    5.0,    5.0,
-                5.0,   5.0,    5.0,    50.0,    5.0,  5.0
-                5.0,   5.0,    5.0,    50.0,    5.0,  5.0)
 
 use_default_kd       1
 scaling              1.0
 
 [FEET]
 
-kpLinear        (300.0 300.0 700.0)
+kpLinear        (300.0 500.0 700.0)
 
-c0               0.01
+c0               10.0
 kpAngular        300.0
 
 use_default_kd     1
@@ -37,10 +37,14 @@ kpForce          (0.0,0.0, 0.0)
 kpCouple         0.0
 
 [NECK]
-weight                  (50.0, 50.0, 50.0)
+weight                  (100.0, 100.0, 100.0)
 c0                      0.01
 kpAngular               100.0
 # kdAngular             100.0
 use_default_kd            1
 scaling                 1.0
 additional_rotation     ((0.0 0.0 1.0),(1.0 0.0 0.0),(0.0 1.0 0.0))
+
+[ANGULAR_MOMENTUM]
+weight          (100.0, 100.0, 0.0)
+kp              (50.0, 50.0, 0.0)
