--- a/app/robots/iCubGazeboV2_5/dcm_walking/common/contactWrenchMapping.ini
+++ b/app/robots/iCubGazeboV2_5/dcm_walking/common/contactWrenchMapping.ini
@@ -4,22 +4,22 @@ use_as_cost_function    1
 weight                  (100.0, 100.0, 100.0)
 
 # remove these lines if you don't want to consider the linear momentum as constraint
-use_as_constraint       1
-kd                      (1.0, 1.0, 1.0)
-kp                      (1.0, 1.0, 1.0)
+# use_as_constraint       1
+# kd                      (1.0, 1.0, 1.0)
+# kp                      (1.0, 1.0, 1.0)
 
 
 [ANGULAR_MOMENTUM]
 # remove these lines if you don't want to consider the angular momentum in the cost function
-# use_as_cost_function    1
-use_as_constraint         1
+use_as_cost_function    1
+# use_as_constraint         1
 weight                  (100.0, 100.0, 100.0)
 kp                      0.0
 ki                      0.0
 
 
 [CONTACT_FORCES]
-staticFrictionCoefficient       0.33
+staticFrictionCoefficient       0.133
 numberOfPoints                  3
 torsionalFrictionCoefficient    0.0133
 foot_size                       ((-0.07   0.12), (-0.02   0.02))
