--- a/app/robots/iCubGazeboV2_5/dcm_walking/common/plannerParams.ini
+++ b/app/robots/iCubGazeboV2_5/dcm_walking/common/plannerParams.ini
@@ -10,7 +10,7 @@ slowWhenTurningGain     5.0
 
 ##Bounds
 #Step length
-maxStepLength           0.20
+maxStepLength           0.18
 minStepLength           0.05
 #Width
 minWidth                0.14
@@ -19,25 +19,25 @@ minWidth                0.14
 maxAngleVariation       10.0
 minAngleVariation       8.0
 #Timings
-maxStepDuration         1.0
-minStepDuration         0.8
+maxStepDuration         2.0
+minStepDuration         1.0
 
 ##Nominal Values
 #Width
 nominalWidth            0.16
 #Height
-stepHeight              0.025
+stepHeight              0.02
 stepLandingVelocity     0.0
 footApexTime            0.8
 comHeightDelta          0.01
 #Timings
-nominalDuration         0.9
-lastStepSwitchTime      0.8
-switchOverSwingRatio    0.7
+nominalDuration         1.5
+lastStepSwitchTime      4.0
+switchOverSwingRatio    0.8
 
 #ZMP Delta
-leftZMPDelta           (0.03 -0.005)
-rightZMPDelta          (0.03 0.005)
+leftZMPDelta           (0.02, -0.00)
+rightZMPDelta          (0.02, 0.00)
 
 #MergePoint
 mergePointRatio         0.4
