tune parameters for icubGazeboV2_5

--- a/app/robots/iCubGazeboV2_5/dcm_walking/common/plannerParams.ini
+++ b/app/robots/iCubGazeboV2_5/dcm_walking/common/plannerParams.ini
@@ -26,18 +26,18 @@ minStepDuration         1.0
 #Width
 nominalWidth            0.16
 #Height
-stepHeight              0.02
+stepHeight              0.025
 stepLandingVelocity     0.0
 footApexTime            0.8
 comHeightDelta          0.01
 #Timings
 nominalDuration         1.5
-lastStepSwitchTime      4.0
-switchOverSwingRatio    0.8
+lastStepSwitchTime      0.8
+switchOverSwingRatio    0.7
 
 #ZMP Delta
-leftZMPDelta           (0.02, -0.00)
-rightZMPDelta          (0.02, 0.00)
+leftZMPDelta           (0.03 -0.005)
+rightZMPDelta          (0.03 0.005)
 
 #MergePoint
 mergePointRatio         0.4
